# zellij

./: AGENTS.md  Cargo.toml  Cross.toml  mise.toml
docs/: remote-protocol.md
docs/plans/: 2025-12-30-zellij-remote-protocol-v2.md  2025-12-31-delta-optimization.md  2025-12-31-quic-datagrams-and-0rtt.md  2025-12-31-zrp-implementation-status.md  2025-12-31-zrp-zellij-integration.md
zellij-remote-bridge/: Cargo.toml
zellij-remote-bridge/examples/: quic_echo_client.rs  quic_echo_server.rs  spike_client.rs  spike_server.rs
zellij-remote-bridge/src/: config.rs  framing.rs  handshake.rs  lib.rs  server.rs
zellij-remote-bridge/tests/: integration_test.rs
zellij-remote-core/: Cargo.toml
zellij-remote-core/src/: backpressure.rs  client_state.rs  delta.rs  frame.rs  input.rs  lease.rs  lib.rs  prediction.rs  render_seq.rs  resume_token.rs  rtt.rs  session.rs  state_history.rs  style_table.rs
zellij-remote-core/src/tests/: backpressure_tests.rs  delta_tests.rs  frame_tests.rs  input_tests.rs  lease_tests.rs  mod.rs  proptest_tests.rs  render_seq_tests.rs  resume_token_tests.rs  rtt_tests.rs  session_tests.rs  state_history_tests.rs  style_table_tests.rs
zellij-remote-protocol/: Cargo.toml  build.rs
zellij-remote-protocol/proto/: zellij_remote.proto
zellij-remote-protocol/src/: lib.rs  tests.rs
zellij-remote-tests/: Dockerfile  Makefile  README.md  docker-compose.yml  run-tests.sh
zellij-remote-tests/scripts/: netem-wrapper.sh  test-auth.sh  test-basic.sh  test-datagrams-0rtt.sh  test-reconnect.sh
zellij-server/: Cargo.toml
zellij-server/src/: lib.rs  (+3 more)
(+12 files in other folders)
