[package]
name = "zellij-remote-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zellij-remote-protocol = { path = "../zellij-remote-protocol" }
log = { workspace = true }
prost = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
proptest = "1.4"
